Fungující na míru konfigurátor, TODO: fix výpočet ceny a testy